--- a/Tópicos em Engenharia de Estruturas VII/Descrição da Atividade.ipynb
+++ b/Tópicos em Engenharia de Estruturas VII/Descrição da Atividade.ipynb
@@ -110,7 +110,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Os resultados obtidos foram plotados utilizando a biblioteca `plotly`. Gerando um gráfico que representa a relação entre a carga distribuída _*q*_ e o deslocamento máximo _*u3*_, permitindo identificar o ponto em que a esrtutura atinge sua capacidade limite."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=u_max_values,\n",
+    "    y=q_values,\n",
+    "    mode='lines+markers',\n",
+    "    name='Dados',\n",
+    "    line=dict(color='blue'),\n",
+    "    marker=dict(size=8)\n",
+    "))\n",
+    "fig.add_shape(type=\"line\",\n",
+    "              x0=u_max_admissivel, y0=0,\n",
+    "              x1=u_max_admissivel, y1=max(q_values) * 1.1,\n",
+    "              line=dict(color=\"red\", dash=\"dash\"),\n",
+    "              name=f'u_max = {u_max_admissivel}')\n",
+    "fig.update_layout(\n",
+    "    title=\"Convergência Numérica: Deslocamento u vs. Carga q\",\n",
+    "    xaxis_title=\"Deslocamento máximo u (m)\",\n",
+    "    yaxis_title=\"Carga distribuída q (N/m)\",\n",
+    "    template=\"plotly_white\"\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O gráfico obtido demonstra um crescimento quase linear do deslocamento em relação à carga, seguido por uma região onde a não linearidade se torna mais evidente. Como resultado, a carga dsitribuída máxima suportada pela estrutura antes de ultrapassar o limite de deslocamento de 1,0 m foi de aproximadamente 1,63 N/m."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"Gráfico Gerado.png\" width=\"500\" height=\"400\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Além disso, observa-se que o critério de convergência foi atendido. No entanto, em alguns determinados pontos, o número máximo de iterações foi alcançado antes da convergência, indicando a necessidade de um refinamento na malha ou na solução."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **_Conclusão_**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O referido projeto demonstrou a aplicabilidade da análise não linear na determinação da capacidade de carga de uma estrutura simples, tal como, a de uma em forma de barra. O uso de um método iterativo permitiu uma resolução diversificada e eficiente, fornecendo dados precisos do deslocamento em função da carga aplicada. A implementação das bibliotecas em Python, demonstrou a eficácia e agilidade da aplicabilidade destas ferramentas na resolução numérica e visualização de resultados complexos. Por fim, a abordagem adotada se alinha às metodologias descritas pelos autores Figueiredo e Serafini (2020), reforçando a importância das técnicas numéricas na engenharia estrutural."
    ]
   },
   {
@@ -125,6 +189,13 @@
    "metadata": {},
    "source": [
     "Fuina, J. S. METODOS DE CONTROLE DE DEFORMA ̧COES PARA ANALISE NAO-LINEAR DE ESTRUTURAS. Disponível em: <https://repositorio.ufmg.br/bitstream/1843/LMCA-769HM7/1/153.pdf>. Acesso em: 3 abr. 2025."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figueiredo, R.; Serafini, M. Análise Não Linear de Estruturas. São Paulo: Editora Engenharia, 2020."
    ]
   }
  ],
