--- a/Tópicos em Engenharia de Estruturas VII/Descrição da Atividade.ipynb
+++ b/Tópicos em Engenharia de Estruturas VII/Descrição da Atividade.ipynb
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fuina, J. S. METODOS DE CONTROLE DE DEFORMA ̧COES PARA ANALISE NAO-LINEAR DE ESTRUTURAS. Disponível em: <https://repositorio.ufmg.br/bitstream/1843/LMCA-769HM7/1/153.pdf>. Acesso em: 3 abr. 2025."
+    "Beer, F. P.; Johnston, E. R.; Dewolf, J. T.; Mazurek, D. F. Resistência dos Materiais. 7. ed. McGraw-Hill, 2017"
    ]
   },
   {
@@ -190,7 +190,21 @@
    "source": [
     "Figueiredo, R.; Serafini, M. Análise Não Linear de Estruturas. São Paulo: Editora Engenharia, 2020."
    ]
-  }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fuina, J. S. METODOS DE CONTROLE DE DEFORMA ̧COES PARA ANALISE NAO-LINEAR DE ESTRUTURAS. Disponível em: <https://repositorio.ufmg.br/bitstream/1843/LMCA-769HM7/1/153.pdf>. Acesso em: 3 abr. 2025."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gere, J. M.; Goodno, B. J. Mecânica dos Materiais. 9. ed. Cengage Learning, 2020."
+   ]
+  },
  ],
  "metadata": {
   "kernelspec": {
