--- a/Tópicos em Engenharia de Estruturas VII/Descrição da Atividade.ipynb
+++ b/Tópicos em Engenharia de Estruturas VII/Descrição da Atividade.ipynb
@@ -25,7 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na engenharia estrutural, um problema é chamado de não-linear quando a rigidez da estrutura muda conforme ela se deforma. Em outras palavras, a resistência da estrutura à deformação não é constante e varia com o deslocamento (Fuina, 2025). Sendo assim, para o desenvolvimento deste estudo implementamos um modelo numérico para avaliação da resposta estrutural de uma barra submetida a um carregamento distribuído crescente. Tendo como objetivo determinar a carga distribuída máxima suportada pela estrutura antes que o deslocamento ultrapasse um valor admissível."
+    "Na engenharia estrutural, um problema é chamado de não linear quando a rigidez da estrutura muda conforme ela se deforma. Em outras palavras, a resistência da estrutura à deformação não é constante e varia com o deslocamento (Fuina, 2025). \n",
+    "\n",
+    "Sendo assim, para o desenvolvimento deste estudo implementamos um modelo numérico para avaliação da resposta estrutural de uma barra submetida a um carregamento distribuído crescente, tendo como objetivo determinar a carga distribuída máxima suportada pela estrutura antes que o deslocamento ultrapasse um valor admissível."
    ]
   },
   {
@@ -39,8 +41,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A metodologia empregada considera um sistema de três graus de liberdade e utiliza um método iterativo para a resolução das equações de equilíbrio. \n",
     "\n",
-    " A metodologia empregada considera um sistema de três graus de liberdade e utiliza um método iterativo para a resolução das equações de equilíbrio. Realizando a simulação em Python, utilizando as bibliotecas `numpy` para operações númericas e `plotly` para a visualização dos resultados. A formulação do problema baseia-se na discretização de uma barra com três pontos de deslocamento `(\\( u_1, u_2, u_3 \\)`. A matriz de rigidez do sistema é definida em função dos deslocamentos, do módulo de elasticidade inicial `\\( E_0 \\)`, da área da seção transversal `\\( S \\)` e do comprimento da barra `\\( L \\)`, conforme apresentado pela função abaixo:"
+    "Realizou-se a simulação em Python, utilizando as bibliotecas `numpy` para operações numéricas e `plotly` para visualização dos resultados. \n",
+    "\n",
+    "A formulação do problema baseia-se na discretização de uma barra com três pontos de deslocamento $u_1$, $u_2$ e $u_3$. A matriz de rigidez do sistema é definida em função dos deslocamentos, do módulo de elasticidade inicial $E_0$, da área da seção transversal $S$ e do comprimento da barra $L$, conforme apresentado na função abaixo:"
    ]
   },
   {
@@ -63,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O sistema é solucionado de forma `iterativa`, que significa basicamente `fazer repetições`, utilizando um critério de convergência sendo implementado na função `resolver_sistema_iterativo`, que recebe o vetor de forças _*F*_ e retorna os deslocamentos obtidos após a convergência:"
+    "O sistema é solucionado de forma *iterativa*, utilizando um critério de convergência implementado na função `resolver_sistema_iterativo`, que recebe o vetor de forças $\\mathbf{F}$ e retorna os deslocamentos obtidos após a convergência:"
    ]
   },
   {
@@ -89,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O código principal executa a simulação variando a carga distribuída _*(q)*_ até que o deslocamento máximo eprmitido seja atingido. Os dados são armazenados durante o processo, para posteriormente análise gráfica."
+    "O código principal executa a simulação variando a carga distribuída $q$ até que o deslocamento máximo permitido seja atingido. Os dados são armazenados durante o processo para posterior análise gráfica."
    ]
   },
   {
@@ -103,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os resultados obtidos foram plotados utilizando a biblioteca `plotly`. Gerando um gráfico que representa a relação entre a carga distribuída _*q*_ e o deslocamento máximo _*u3*_, permitindo identificar o ponto em que a esrtutura atinge sua capacidade limite."
+    "Os resultados obtidos foram plotados utilizando a biblioteca `plotly`, gerando um gráfico que representa a relação entre a carga distribuída $q$ e o deslocamento máximo $u_3$, permitindo identificar o ponto em que a estrutura atinge sua capacidade limite."
    ]
   },
   {
@@ -124,8 +129,7 @@
     "fig.add_shape(type=\"line\",\n",
     "              x0=u_max_admissivel, y0=0,\n",
     "              x1=u_max_admissivel, y1=max(q_values) * 1.1,\n",
-    "              line=dict(color=\"red\", dash=\"dash\"),\n",
-    "              name=f'u_max = {u_max_admissivel}')\n",
+    "              line=dict(color=\"red\", dash=\"dash\"))\n",
     "fig.update_layout(\n",
     "    title=\"Convergência Numérica: Deslocamento u vs. Carga q\",\n",
     "    xaxis_title=\"Deslocamento máximo u (m)\",\n",
@@ -139,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O gráfico obtido demonstra um crescimento quase linear do deslocamento em relação à carga, seguido por uma região onde a não linearidade se torna mais evidente. Como resultado, a carga dsitribuída máxima suportada pela estrutura antes de ultrapassar o limite de deslocamento de 1,0 m foi de aproximadamente 1,63 N/m."
+    "O gráfico obtido demonstra um crescimento quase linear do deslocamento em relação à carga, seguido por uma região onde a não linearidade se torna mais evidente. Como resultado, a carga distribuída máxima suportada pela estrutura antes de ultrapassar o limite de deslocamento de 1,0 m foi de aproximadamente 1,63 N/m."
    ]
   },
   {
@@ -153,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além disso, observa-se que o critério de convergência foi atendido. No entanto, em alguns determinados pontos, o número máximo de iterações foi alcançado antes da convergência, indicando a necessidade de um refinamento na malha ou na solução."
+    "Além disso, observa-se que o critério de convergência foi atendido. No entanto, em alguns pontos, o número máximo de iterações foi alcançado antes da convergência, indicando a necessidade de refinamento na malha ou na solução numérica."
    ]
   },
   {
@@ -167,44 +171,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O referido projeto demonstrou a aplicabilidade da análise não linear na determinação da capacidade de carga de uma estrutura simples, tal como, a de uma em forma de barra. O uso de um método iterativo permitiu uma resolução diversificada e eficiente, fornecendo dados precisos do deslocamento em função da carga aplicada. A implementação das bibliotecas em Python, demonstrou a eficácia e agilidade da aplicabilidade destas ferramentas na resolução numérica e visualização de resultados complexos. Por fim, a abordagem adotada se alinha às metodologias descritas pelos autores Figueiredo e Serafini (2020), reforçando a importância das técnicas numéricas na engenharia estrutural."
+    "O referido projeto demonstrou a aplicabilidade da análise não linear na determinação da capacidade de carga de uma estrutura simples, tal como a de uma barra. O uso de um método iterativo permitiu uma resolução eficiente, fornecendo dados precisos do deslocamento em função da carga aplicada. \n",
+    "\n",
+    "A implementação das bibliotecas em Python demonstrou a eficácia e agilidade dessas ferramentas na resolução numérica e visualização de resultados complexos. Por fim, a abordagem adotada se alinha às metodologias descritas por Figueiredo e Serafini (2020), reforçando a importância das técnicas numéricas na engenharia estrutural."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **_Referência_**"
+    "### **_Referências_**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Beer, F. P.; Johnston, E. R.; Dewolf, J. T.; Mazurek, D. F. Resistência dos Materiais. 7. ed. McGraw-Hill, 2017"
+    "Beer, F. P.; Johnston, E. R.; Dewolf, J. T.; Mazurek, D. F. *Resistência dos Materiais*. 7. ed. McGraw-Hill, 2017."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Figueiredo, R.; Serafini, M. Análise Não Linear de Estruturas. São Paulo: Editora Engenharia, 2020."
+    "Figueiredo, R.; Serafini, M. *Análise Não Linear de Estruturas*. São Paulo: Editora Engenharia, 2020."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fuina, J. S. METODOS DE CONTROLE DE DEFORMA ̧COES PARA ANALISE NAO-LINEAR DE ESTRUTURAS. Disponível em: <https://repositorio.ufmg.br/bitstream/1843/LMCA-769HM7/1/153.pdf>. Acesso em: 3 abr. 2025."
+    "Fuina, J. S. *Métodos de Controle de Deformações para Análise Não Linear de Estruturas*. Disponível em: [https://repositorio.ufmg.br/bitstream/1843/LMCA-769HM7/1/153.pdf](https://repositorio.ufmg.br/bitstream/1843/LMCA-769HM7/1/153.pdf). Acesso em: 3 abr. 2025."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gere, J. M.; Goodno, B. J. Mecânica dos Materiais. 9. ed. Cengage Learning, 2020."
+    "Gere, J. M.; Goodno, B. J. *Mecânica dos Materiais*. 9. ed. Cengage Learning, 2020."
    ]
-  },
+  }
  ],
  "metadata": {
   "kernelspec": {
